--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,16 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel='stylesheet' href='../static/index.css'>
+        <link rel='stylesheet' href='../static/style/base.css'>
+        <link rel='stylesheet' href='../static/style/index.css'>
         <title>Mosiac</title>
     </head>
     <body>
         <header>
-
+            
         </header>
         <div id='mainbody'>
-            
+            <p>Help</p>
         </div>
         <footer>
 
