Omitted someunnecessary files

--- a/templates/error.html
+++ b/templates/error.html
@@ -10,7 +10,7 @@
         <div id='error'>
             <h2 id='errorCode'>{{(error['code']|string)+' Error'}} </h2>
             <h4 id='errorDesc'>{{error['description']}}</h4>
-            <img href='../static/assets/google_dino.gif'>
+            <img id='errorGif' src='../static/assets/google_dino.gif'>
         </div>
     </body>
 </html>
