--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Mosiac</title>
         <meta charset="utf-8">
         <link rel='stylesheet' href='../static/style/base.css'>
         <link rel='stylesheet' href='../static/style/index.css'>
-        <title>Mosiac</title>
     </head>
     <body>
         <header>
-            
+            <img src='../static/assets/app_logo.png'>
         </header>
         <div id='mainbody'>
-            <p>Help</p>
+            
         </div>
         <footer>
 
