Added new buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,15 @@
     </head>
     <body>
         <header>
-            <img src='../static/assets/app_logo.png'>
+            <img src='../static/assets/word_logo.png' id='appIcon'>
+            <p class='desc'>Creating pixel art from images</p>
+            <nav>
+                <a href='https://github.com/Niyaz-Mohamed/Mosiac' class='pixelBtn'>
+                    <span>
+                        Github
+                    </span>
+                </a>
+            </nav>
         </header>
         <div id='mainbody'>
             
