--- a/static/style/base.css
+++ b/static/style/base.css
@@ -1,10 +1,31 @@
 html {
-    font-family: sans-serif;
+    /* font-family: 'VT323'; */
+    font-family: "Open Sans",sans-serif;
+    font-size: 16px;
+}
+
+a:-webkit-any-link {
+    color: -webkit-link;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+*:after, *:before {
+    margin: 0;
+    padding: 0;
 }
 
 .centerContainer {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
