--- a/static/style/index.css
+++ b/static/style/index.css
@@ -12,3 +12,62 @@ header {
     padding: 100px;
     background: var(--baseCol1);
 }
+
+#appIcon {
+    width: 650px;
+    height: auto;
+}
+
+header .desc {
+    font-size: 24px;
+    line-height: 1.4;
+    margin: 50px auto;
+    text-align: center;
+    width: 100%;
+    color: black;
+}
+
+.pixelBtn {
+    font-size: 20px;
+    color: white !important;
+    background: black;
+    height: auto;
+    width: auto;
+    max-width: fit-content;
+    margin: 10px;
+    z-index: 2;
+    /* font-family: 'VT323'; */
+    
+    position: relative;
+    display: block;
+    text-transform: uppercase;
+    
+    padding: 15px 20px;
+  }
+  
+  .pixelBtn::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    left: -10px;
+    right: -10px;
+    background: black;
+    z-index: -1;
+  }
+  
+  .pixelBtn::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 4px;
+    bottom: 4px;
+    left: -6px;
+    right: -6px;
+    background: black;
+    z-index: -1;
+  }
+
+  /*TODO: Add button hover animations, Edit button text, test image form*/
+
