Added some To-Dos

--- a/static/style/index.css
+++ b/static/style/index.css
@@ -69,5 +69,9 @@ header .desc {
     z-index: -1;
   }
 
-  /*TODO: Add button hover animations, Edit button text, test image form*/
+  /*TODO: Add button hover animations, 
+  Edit button text, 
+  test image form
+  Add global letter spacing
+  Try Bootstrap studio*/
 
