--- a/static/style/base.css
+++ b/static/style/base.css
@@ -1,7 +1,28 @@
+:root {
+    --buttonAnim: all 0.5s ease-in;
+    --sandpaper: #ECB807;
+    --deep_blue: #1D809F;
+    --bs-font-sans-serif: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+@font-face {
+    src: url(../fonts/Minecraft.ttf);
+    font-family: minecraft;
+    font-stretch: expanded;
+}
+
 html {
     /* font-family: 'VT323'; */
-    font-family: "Open Sans",sans-serif;
+    font-family: minecraft;
     font-size: 16px;
+    letter-spacing: 1.5px;
+    line-height: 1.4;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
 }
 
 a:-webkit-any-link {
@@ -10,15 +31,25 @@ a:-webkit-any-link {
     text-decoration: none;
 }
 
-*:after, *:before {
+*, *:after, *:before {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.shadowed {
+    box-shadow: 5px 10px 18px #1d1d1d;;
+}
+
+.roundedCircle {
+    border-radius: 50% !important
 }
 
 .centerContainer {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 p {
@@ -29,3 +60,6 @@ p {
     margin-inline-end: 0px;
 }
 
+header {
+    width: 100%;
+}
