--- a/static/style/index.css
+++ b/static/style/index.css
@@ -1,30 +1,6 @@
-:root {
-    --baseCol1: #89ABE3FF;
-    --baseCol2: white;
-}
-
 body {
     margin: 0px;
-}
-
-header {
-    text-align: center;
-    padding: 100px;
-    background: var(--baseCol1);
-}
-
-#appIcon {
-    width: 650px;
-    height: auto;
-}
-
-header .desc {
-    font-size: 24px;
-    line-height: 1.4;
-    margin: 50px auto;
-    text-align: center;
-    width: 100%;
-    color: black;
+    min-width: 1000px;
 }
 
 .pixelBtn {
@@ -43,9 +19,10 @@ header .desc {
     text-transform: uppercase;
     
     padding: 15px 20px;
-  }
+    transition: var(--buttonAnim);
+}
   
-  .pixelBtn::before {
+.pixelBtn::before {
     content: "";
     display: block;
     position: absolute;
@@ -55,9 +32,10 @@ header .desc {
     right: -10px;
     background: black;
     z-index: -1;
-  }
+    transition: var(--buttonAnim);
+}
   
-  .pixelBtn::after {
+.pixelBtn::after {
     content: "";
     display: block;
     position: absolute;
@@ -67,11 +45,59 @@ header .desc {
     right: -6px;
     background: black;
     z-index: -1;
-  }
+    transition: var(--buttonAnim);
+}
 
-  /*TODO: Add button hover animations, 
+.pixelBtn:hover, .pixelBtn:hover::after, .pixelBtn:hover::before {
+    color: black !important;
+    background: white;
+}
+
+.pixelBtn:hover {
+    transform: scale(1.1);
+}
+
+header {
+    text-align: center;
+}
+
+#appIcon {
+    width: 100%;
+    height: auto;
+    max-width: 460px;
+}
+
+#navSection {
+    width: 50%;
+    height: 100%;
+    float: left;
+    padding: 50px;
+    background: var(--sandpaper);
+}
+
+#navSection .desc {
+    font-size: 26px;
+    margin: 50px auto;
+    text-align: center;
+    width: 100%;
+    color: black;
+}
+
+#headDesc {
+    width: 50%;
+    height: 100%;
+    float: right;
+    padding: 50px;
+    background: var(--deep_blue);
+    color: white;
+
+    font-size: 20px;
+}
+
+  /*TODO:
   Edit button text, 
   test image form
   Add global letter spacing
-  Try Bootstrap studio*/
+  Add a common template html file
+  */
 
