Added txt files for large text blocks

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         </div>
         <div id='headDesc' class='centerContainer'>
             <div id='appIntro'>
-                <p>Mosiac allows you to take a high-definition image and convert it to pixel art. You can freely customize the degree of pixelixation </p>
+                <p>{{title_desc}}</p>
             </div>
         </div>
         </header>
