--- a/static/style/index.css
+++ b/static/style/index.css
@@ -3,64 +3,6 @@ body {
     min-width: 1000px;
 }
 
-.pixelBtn {
-    font-size: 20px;
-    color: white !important;
-    background: black;
-    height: auto;
-    width: auto;
-    max-width: fit-content;
-    margin: 10px;
-    z-index: 2;
-    /* font-family: 'VT323'; */
-    
-    position: relative;
-    display: block;
-    text-transform: uppercase;
-    
-    padding: 15px 20px;
-    transition: var(--buttonAnim);
-}
-  
-.pixelBtn::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 10px;
-    bottom: 10px;
-    left: -10px;
-    right: -10px;
-    background: black;
-    z-index: -1;
-    transition: var(--buttonAnim);
-}
-  
-.pixelBtn::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 4px;
-    bottom: 4px;
-    left: -6px;
-    right: -6px;
-    background: black;
-    z-index: -1;
-    transition: var(--buttonAnim);
-}
-
-.pixelBtn:hover, .pixelBtn:hover::after, .pixelBtn:hover::before {
-    color: black !important;
-    background: white;
-}
-
-.pixelBtn:hover {
-    transform: scale(1.1);
-}
-
-.redBtn, .redBtn::after,.redBtn::before {
-    background: tomato;
-} 
-
 header {
     text-align: center;
 }
@@ -77,7 +19,6 @@ header {
     float: left;
     padding: 50px;
     background: var(--sandpaper);
-    border-bottom: 10px solid var(--deep_blue);
 }
 
 #navSection .desc {
@@ -85,6 +26,15 @@ header {
     text-align: center;
     width: 100%;
     color: black;
+}
+
+#navSection .navContent {
+    width: 100%;
+    top: 30%;
+}
+
+#navSection .desc {
+    margin-bottom: 50px;
 }
 
 #headDesc {
@@ -95,7 +45,6 @@ header {
     background: var(--deep_blue);
     color: white;
     font-size: 20px;
-    border-bottom: 10px solid var(--sandpaper);
 }
 
 #mainAppDesc {
@@ -106,12 +55,35 @@ header {
 #examples {
     width: 100%;
     min-height: 500px;
-    background: var(--cardillac);
+    background: var(--deep_red);
+    border-bottom: 10px dashed var(--deep_blue);
+    color: white;
 }
+
+.leftBorder {
+    width: 50%;
+    height: auto;
+    content: '';
+    float: left;
+    top: 0 !important;
+    border-top: 10px dashed var(--sandpaper);
+}
+
+.rightBorder {
+    width: 50%;
+    height: auto;
+    content: '';
+    float: right;
+    top: 0 !important;
+    border-top: 10px dashed var(--deep_blue);
+}
+
+/* Editor Portion */
 
 #pixelator {
     width:100%;
-    min-height: height 500px;
+    min-height: 100%;
+    padding: 75px;
     background: var(--deep_blue);
 }
 
