Added complete footer

--- a/static/style/base.css
+++ b/static/style/base.css
@@ -3,6 +3,8 @@
     --sandpaper: #ECB807;
     --deep_blue: #1D809F;
     --deep_red: #d86425;
+    --mod_white: #efeae1;
+    --atom_gray: #574c4f;
     --bs-font-sans-serif: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
@@ -142,3 +144,34 @@ header {
 .redBtn, .redBtn::after,.redBtn::before {
     background: tomato;
 } 
+
+/* Footer Styling */
+
+footer {
+    background: var(--mod_white);
+    padding: 30px;
+    color: var(--atom_gray);
+    width: 100%;
+}
+
+#copyright {
+    width: 100%;
+    margin: 20px 0px;
+}
+
+#copyrightText {
+    text-align: center;
+    font-size: 18px;
+    width: 20%;
+}
+
+#footerLogoLink {
+    text-align: center;
+    margin: 20px, 0px;
+    width: 100%;
+}
+
+#footerLogo {
+    height: 44px;
+    width: auto;
+}
