--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+        <link rel="shortcut icon" href="../static/assets/favicon.ico" type="image/x-icon">
         <link rel='stylesheet' href='../static/style/base.css'>
         <title>Mosiac</title>
         {% block head %}
