--- a/templates/library.html
+++ b/templates/library.html
@@ -4,6 +4,17 @@
 {% endblock %}
 {% block body %}    
     <header class='centerContainer'>
-        <p>Welcome to the library!</p>
+        <div class='centerContainer'>
+            <img src='../static/assets/word_logo.png' id='appLogo'>
+        </div>
+        <div id='headerContent' class='centerContainer'>
+            <p id='editorTitle' class='title'>Library</p>
+            <nav>
+                <a href='home' class='pixelBtn redBtn'>Home</a>
+                <a href='editor' class='pixelBtn'>Editor</a>
+                <a href='' class='pixelBtn'>Library</a>
+                <a href='https://github.com/Niyaz-Mohamed/Mosiac/tree/main' class='pixelBtn'> Github</a>
+            </nav>
+        </div>
     </header>
 {% endblock %}
