--- a/templates/editor.html
+++ b/templates/editor.html
@@ -8,12 +8,12 @@
             <img src='../static/assets/word_logo.png' id='appLogo'>
         </div>
         <div id='headerContent' class='centerContainer'>
-            <p id='editorTitle' class='title'>Editor</p>
+            <p id='headerTitle' class='title'>Editor</p>
             <nav>
                 <a href='home' class='pixelBtn redBtn'>Home</a>
-                <a href='editor' class='pixelBtn'>Editor</a>
+                <a href='' class='pixelBtn'>Editor</a>
                 <a href='library' class='pixelBtn'>Library</a>
-                <a href='https://github.com/Niyaz-Mohamed/mosaic' class='pixelBtn'> Github</a>
+                <a href='https://github.com/Niyaz-Mohamed/Mosiac/tree/main' class='pixelBtn'> Github</a>
             </nav>
         </div>
     </header>
