--- a/templates/editor.html
+++ b/templates/editor.html
@@ -42,7 +42,7 @@
                 <div id='completeSlider'>
                     <p id='startValue'>0</p>
                     <div class='slideContainer' id='pixSlider'>
-                        <input type="range" min='50' max='100' value='75' class='slider' name='pixDeg'>
+                        <input type="range" min='50' max='100' value='{{pixDeg}}' class='slider' name='pixDeg'>
                     </div>
                     <p id='endValue'>100</p>
                 </div>
@@ -52,7 +52,11 @@
                 <input type="number" value={{width|default(100,true)}} placeholder="New Image Width" id='widthInput' class='textInput' min="1" name='newWidth'>
             </div>
             <label class='checkContainer'>Greyscale
+                {% if greyscale==True %}
+                <input type="checkbox" name='greyscale' checked>
+                {% else %}
                 <input type="checkbox" name='greyscale'>
+                {% endif %}
                 <span class='checkmark'></span>
             </label>
             <label class='pixelBtn redBtn centerContainer' id='imgRefresh'>
