--- a/templates/editor.html
+++ b/templates/editor.html
@@ -29,7 +29,7 @@
         
         <form method='POST' action='/editor' enctype="multipart/form-data" class='centerContainer'>
             <label class='imgUpload'>
-                <input type="file" accept='image/png' name='file'>
+                <input type="file" accept='image/png, image/jpg' name='file'>
                 {% if filename == '' or filename == '_pixelated.png' %}
                 <p>Upload Image</p>
                 {% else %}
@@ -38,9 +38,21 @@
                 {% endif %}
             </label> 
             <label class='pixelBtn redBtn centerContainer' id='imgRefresh'>
-                <input type='submit'>
+                <input type='submit' name='uploadToLib' value='False'>
                 <p><span id='refreshIcon'>&#8634;</span> Refresh</p>
             </label>
+            {% if filename != '' %}
+            <a href='library' class=pixelBtn>
+                <label class='centerContainer'>
+                    <input type='submit' name='uploadToLib' value='True'>
+                    <p>
+                        <span id='downloadIcon'>
+                            <i class='fa fa-download'></i>
+                        </span> 
+                    Upload to Library</p>
+                </label>
+            </a>
+            {% endif %}
             <div id='pixSliderContainer' class='centerContainer'>
                 <p id='pixDegTitle'>Pixelation Degree</p>
                 <div id='completeSlider'>
