Made github open in a new page

--- a/templates/editor.html
+++ b/templates/editor.html
@@ -13,7 +13,7 @@
                 <a href='home' class='pixelBtn redBtn'>Home</a>
                 <a href='' class='pixelBtn'>Editor</a>
                 <a href='library' class='pixelBtn'>Library</a>
-                <a href='https://github.com/Niyaz-Mohamed/Mosiac/tree/main' class='pixelBtn'> Github</a>
+                <a href='https://github.com/Niyaz-Mohamed/Mosiac/tree/main' target='_blank' class='pixelBtn'> Github</a>
             </nav>
         </div>
     </header>
