--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
                 <nav class='centerContainer'>
                     <a href='#notable' class='pixelBtn'>Notes</a>
                     <a href='library' class='pixelBtn'>Library</a>
-                    <a href='https://github.com/Niyaz-Mohamed/Mosiac/tree/main' class='pixelBtn'>Github</a>
+                    <a href='https://github.com/Niyaz-Mohamed/Mosiac/tree/main' target='_blank' class='pixelBtn'>Github</a>
                 </nav>
             </div>
         </div>
