--- a/templates/library.html
+++ b/templates/library.html
@@ -11,8 +11,7 @@
             <p id='editorTitle' class='title'>Library</p>
             <nav>
                 <a href='home' class='pixelBtn redBtn'>Home</a>
-                <a href='editor' class='pixelBtn'>Editor</a>
-                <a href='' class='pixelBtn'>Library</a>
+                <a class='pixelBtn'>Library</a>
                 <a href='https://github.com/Niyaz-Mohamed/Mosiac/tree/main' target='_blank' class='pixelBtn'> Github</a>
             </nav>
         </div>
