--- a/templates/editor.html
+++ b/templates/editor.html
@@ -11,7 +11,7 @@
             <p id='headerTitle' class='title'>Editor</p>
             <nav>
                 <a href='home' class='pixelBtn redBtn'>Home</a>
-                <a href='' class='pixelBtn'>Editor</a>
+                <a class='pixelBtn'>Editor</a>
                 <a href='library' class='pixelBtn'>Library</a>
                 <a href='https://github.com/Niyaz-Mohamed/Mosiac/tree/main' target='_blank' class='pixelBtn'> Github</a>
             </nav>
