Improved the library page

--- a/static/style/library.css
+++ b/static/style/library.css
@@ -8,7 +8,6 @@ header {
     margin: 0px;
     padding-bottom: 100px !important;
     padding: 50px;
-    border-bottom: var(--lego_width) dashed var(--deep_blue);
 }
 
 header div {
@@ -68,12 +67,14 @@ header .pixelBtn {
 
 .odd {
     background: var(--deep_blue);
-    border-bottom: var(--lego_width) dashed var(--deep_red);
+    border-bottom: var(--lego_width) solid var(--mod_white);
+    border-top: var(--lego_width) solid var(--mod_white);
 }
 
 .even {
     background: var(--deep_red);
-    border-bottom: var(--lego_width) dashed var(--deep_blue);
+    border-bottom: var(--lego_width) solid var(--mod_white);
+    border-top: var(--lego_width) solid var(--mod_white);
 }
 
 :host(:last-child) .jsonTab {
