Improved error page

--- a/static/style/editor.css
+++ b/static/style/editor.css
@@ -90,6 +90,7 @@ header .pixelBtn {
 #fileSize {
     width: 100%;
     font-size: 14px;
+    text-decoration: none;
 }
 
 input[type='file'], input[type='submit'] {
