--- a/templates/error.html
+++ b/templates/error.html
@@ -3,8 +3,8 @@
     <link rel='stylesheet' href='../static/style/error.css'>
 {% endblock %}
 {% block body %}
-    <div id='error' class='shadowed'>
-        <h2 id='errorCode'>{{(error['code']|string)+' Error'}} </h2>
+    <div id='error' class='shadowed pixelBtn'>
+        <h2 id='errorCode'>{{(error['code']|string)}} </h2>
         <h4 id='errorDesc'>{{error['description']}}</h4>
         <img id='errorGif' src='../static/assets/google_dino.gif'>
     </div>
