--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <div id='footerContent' class='centerContainer'>
                 <div id='copyright' class='centerContainer'>
                     <p id='copyrightText'>
-                        ©2021 by Mohamed Shahul Hameed Niyaz. Do not use any portion of this project without prior permission from the author</p>
+                        ©2021 by Mohamed Shahul Hameed Niyaz. All rights reserved, but usage of downlaoded images commercially is allowed</p>
                 </div> 
                 <div id="footerLogoLink">
                     <a href="https://github.com/Niyaz-Mohamed">
